--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@
                 <div class="col-12 col-xl-6">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 mt-4">
                     <li class="nav-item mx-2">
-                        <a class="nav-link active text-light fw-bold" aria-current="page" href="#">About</a>
+                        <a class="nav-link active text-light fw-bold" aria-current="page" href="#about">About</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link active text-light fw-bold" aria-current="page" href="#">Portfolio</a>
+                        <a class="nav-link active text-light fw-bold" aria-current="page" href="#portfolio">Portfolio</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link active text-light fw-bold" aria-current="page" href="#">Testimonials</a>
+                        <a class="nav-link active text-light fw-bold" aria-current="page" href="#testimonials">Testimonials</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link active text-light fw-bold" aria-current="page" href="#">Services</a>
+                        <a class="nav-link active text-light fw-bold" aria-current="page" href="#services">Services</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link active text-light fw-bold" aria-current="page" href="#">Blog</a>
+                        <a class="nav-link active text-light fw-bold" aria-current="page" href="#blog">Blog</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link active text-light fw-bold" aria-current="page" href="#">Our Team</a>
+                        <a class="nav-link active text-light fw-bold" aria-current="page" href="#ourteam">Our Team</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link active text-light fw-bold" aria-current="page" href="#">Contact Us</a>
+                        <a class="nav-link active text-light fw-bold" aria-current="page" href="#contactus">Contact Us</a>
                     </li>
                     </ul>
                 </div>
@@ -62,14 +62,14 @@
             </div>
         </section>
 
-        <section class="row justify-content-center m-0 mt-3 w-100 ">
+        <section class="row justify-content-center m-0 mt-3 w-100 " id="about">
             <div class="col-12 col-xl-6 text-center">
                 <h2 class="text-secondary fw-bold my-5">About</h2>
                 <p class="mb-5 text-secondary" >It is an amazng one-page theme with great features that offers an inscredible experience?It is easy to install, make changes, adapt for your business.A modern design with clean lines and styling for a wide variety of content, exactly how a business design should be. You can add as many images as you want to the main header area and turn them into slider.</p>
             </div>
         </section>
 
-        <section class="row justify-content-center m-0 mt-3 pt-4 w-100" style="background-image: url('images/SL-122519-26430-29.jpg'); background-size: cover; ">
+        <section id="portfolio" class="row justify-content-center m-0 mt-3 pt-4 w-100" style="background-image: url('images/SL-122519-26430-29.jpg'); background-size: cover; ">
             <div class="col-12 col-xl-6 text-center">
                 <h2 class="text-secondary fw-bold my-2">Projects</h2>
                 <p class="mb-5 text-secondary">You'll love our work. Check it out!</p>
@@ -91,7 +91,7 @@
             </div>
         </section>      
 
-        <section class="row justify-content-center w-100 m-0" style="background-image: url('images/bkg-testimonial.jpg'); background-size: cover;">
+        <section id="testimonials" class="row justify-content-center w-100 m-0" style="background-image: url('images/bkg-testimonial.jpg'); background-size: cover;">
             <div id="carouselExampleIndicators " class="carousel slide" data-bs-ride="carousel" data-bs-pause="false">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="rounded-circle active" aria-current="true" aria-label="Slide 1"></button>
@@ -153,7 +153,7 @@
             </div>
         </section>
 
-        <section>
+        <section id="services">
 
                 <div class="col-8 text-center mx-auto">
                     <h2 class="text-secondary fw-bold mt-5">Services</h2>
@@ -179,7 +179,7 @@
                 </div>
         </section>
 
-        <section class="bg-dark">
+        <section id="blog" class="bg-dark">
             <div class="col-12 col-xl-8 text-center mx-auto">
                 <h2 class="text-light fw-bold mt-5 pt-5">Latest News</h2>
                 <p class="text-secondary">If you are interested in the latest articles in the industry, take a sneak peed at our blog. You have nothing to loose!</p>
@@ -220,7 +220,7 @@
             </div>
         </section>
 
-        <section class="w-100" style="background-image: url('images/bkg-counter.jpg'); background-position: center; background-size: cover;">
+        <section id="ourteam" class="w-100" style="background-image: url('images/bkg-counter.jpg'); background-position: center; background-size: cover;">
             <div class="row justify-content-center py-5 w-100">
                 <div class="col-12 col-xl-3 text-center border-xl-end pt-2">
                     <h1 class="text-light fw-bold">260</h1>
@@ -237,7 +237,7 @@
             </div>
         </section>
 
-        <section class="py-5">
+        <section id="contactus" class="py-5">
             <div class="col-8 mx-auto text-secondary position-relative">
                 <h2 class="fw-bold text-center">Contact us</h2>
                 <div class="row position-relative mt-5">
@@ -315,7 +315,7 @@
         </section>
 
         <section class="py-4" style="background-color: #242320;">
-            <p class="text-center text-secondary pt-3">Theme: Illdy. <span class="text-light fw-bold">©Copyright 2017. All Rights Reserved.</span></p>
+            <p class="text-center text-secondary pt-3">Theme: Delahaye Christophe. <span class="text-light fw-bold">©Copyright 2024. All Rights Reserved.</span></p>
         </section>
     </main>
 
